# dbcrudgen-cpp

./: CMakeLists.txt  dbcrudgen-mastered.drawio
src/: main.cpp
src/orm/codegen/cpp/: CppMYSQLDbTableModelCodeGen.h  CppMYSQLSCRUDCodeGen.h
src/orm/creators/cpp/: CppMYSQLProjectCreator.h
